upload image by pet id
