# docs/swagger.yaml
@@ -21,6 +21,8 @@ definitions:
         type: string
       is_admin:
         type: boolean
+      is_org:
+        type: boolean
       iss:
         description: the `iss` (Issuer) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.1
         type: string
@@ -41,11 +43,6 @@ definitions:
       sub:
         description: the `sub` (Subject) claim. See https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.2
         type: string
-      tags:
-        description: Custome fields
-        items:
-          type: integer
-        type: array
       updated_at:
         type: string
     type: object
@@ -65,14 +62,25 @@ definitions:
       password:
         type: string
     type: object
+  img.UploadResp:
+    properties:
+      downloadURL:
+        type: string
+    type: object
   jwt.NumericDate:
     properties:
       time.Time:
         type: string
     type: object
-  pet.UploadResp:
+  pet.CreateBody:
     properties:
-      downloadURL:
+      description:
+        type: string
+      lat:
+        type: number
+      lng:
+        type: number
+      name:
         type: string
     type: object
   repository.Pet:
@@ -284,6 +292,37 @@ paths:
       summary: list all pets from database
       tags:
       - pet
+    post:
+      consumes:
+      - application/json
+      description: Create pet
+      parameters:
+      - description: Pet details
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/pet.CreateBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/repository.Pet'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - Bearer: []
+      summary: Create pet
+      tags:
+      - pet
   /api/v1/pet/img:
     post:
       consumes:
@@ -295,13 +334,18 @@ paths:
         name: file
         required: true
         type: file
+      - description: PetId
+        in: query
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/pet.UploadResp'
+            $ref: '#/definitions/img.UploadResp'
         "400":
           description: Bad Request
           schema:
