# handlers/pet/img/post.go
@@ -3,9 +3,11 @@ package img
 import (
 	"fmt"
 	"io/ioutil"
+	"strconv"
 	"strings"
 
 	"github.com/cjtim/be-friends-api/internal/gstorage"
+	"github.com/cjtim/be-friends-api/repository"
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 )
@@ -22,11 +24,20 @@ type UploadResp struct {
 // @accept 		 mpfd
 // @Security 	Bearer
 // @Param		 file 	formData	file 			true	"File upload"
-// @Success      200  	{object}  	pet.UploadResp
+// @Param		 id 	query		integer 		true	"PetId"
+// @Success      200  	{object}  	img.UploadResp
 // @Failure      400  	{string}  	string
 // @Failure      500  	{string}  	string
 // @Router       /api/v1/pet/img [post]
 func PetFileUpload(c *fiber.Ctx) error {
+	idStr := c.Query("id", "")
+	if idStr == "" {
+		return c.SendStatus(fiber.StatusBadRequest)
+	}
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		return err
+	}
 
 	file, err := c.FormFile("file")
 	if err != nil {
@@ -43,12 +54,17 @@ func PetFileUpload(c *fiber.Ctx) error {
 
 	extensions := strings.Split(file.Filename, ".")
 	filename := uuid.New().String()
-	path := fmt.Sprintf("pets/%s.%s", filename, extensions[len(extensions)-1])
+	path := fmt.Sprintf("pets/%d/%s.%s", id, filename, extensions[len(extensions)-1])
 	client, err := gstorage.GetClient()
 	if err != nil {
 		return err
 	}
 	downloadURL, err := client.Upload(path, bdata)
+	if err != nil {
+		return err
+	}
+
+	err = repository.PetPicRepo.Add(id, []string{downloadURL})
 	if err != nil {
 		return err
 	}
